KS:M => Fixed sidemenu bug, sidemenu now is always stretched to the bottom depending on the content, added padding for list badges parameter-list.component

--- a/keyscore-manager/src/app/style/style.css
+++ b/keyscore-manager/src/app/style/style.css
@@ -304,7 +304,8 @@
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     position: relative;
     background: #365880;
     color: #fff;
